css/style.css
@font-face {
    font-family: "URW Gothic";
    src: url('../assets/urw_gothic.ttf');
}

@font-face {
    font-family: "URW Gothic";
    src: url('../assets/urw_gothic_bold.ttf');
    font-weight: bold;
}


body {
    padding: 0;
    margin: 0;
    color: #280049;
    font-family: sans-serif;
    background-color: #faf7f5;
    line-height: 1.5em;
}


#header {
    background-color: #ffeac2;
}

h1, h2, h3 {
    margin: 0;
}

h1 {
    font-size:3em;
    font-family: "URW Gothic";
    font-weight: normal;
}

h2 {
    font-size:2em;
    font-family: "URW Gothic";
}

.title-square {
    width: 1.2em;
    height: 1.2em;
    background-color: red;
    line-height: 1.2em;
    font-size: 1em;
    display: inline-block;
    border-radius: 8px;
    text-align: center;

    margin-top: 15px;
}

#title-d {
    background-color: #ff9c62;
}

#title-o {
    background-color: #ffad57;
}

#title-g {
    background-color: #ffc15a;
}

#title-s {
    background-color: #ffdc5a;
}

#title {
    display: flex;
    justify-content: center;
    margin: auto;
    align-items: stretch;
    padding-bottom: 40px;
}

#title .column:first-child {
    padding-left: 5%;
}

#title .column:last-child {
    background-image: url("../assets/dog.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    width:0;
    padding-right: 15em;
    display: inline-block;
}

.title-content {
    padding-top: 80px;
    padding-bottom: 40px;
    max-width: 1366px;
    margin: auto;
    display: flex;;
}

#left-images, #right-images {
    width: 25%;
    display: flex;
    flex-direction: column;
}

.decor-img {
    background-size:contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 50%;
}

#left-images .decor-img:first-child {
    background-image: url("../assets/dog2.png");
}

#left-images .decor-img:last-child {
    background-image: url("../assets/dog5.png");
}

#central-column {
    width: 70%;
}

#right-images .decor-img:first-child {
    background-image: url("../assets/dog3.png");
}

#right-images .decor-img:last-child {
    background-image: url("../assets/dog4.png");
}

#information {
    text-align: center;
    margin: auto;
    line-height: 2em;
    font-size: 1em;
    padding-left: 25px;
    padding-right: 25px;
}

.content {
    max-width: 1000px;
    margin: auto;
}

#next-talk {
    box-shadow: inset 0 calc(2em + 150px) 0 0 #ffeac2;
}


h2 {
    margin: 0;
    text-align: center;
    padding-bottom: 1em;
    padding-top: 40px;
    font-weight: normal;
}

.details-box {
    background-color: #fff;
    padding: 30px;
    border-radius: 8px;
    margin-bottom: 20px;
    box-shadow: -10px 10px rgba(0, 0, 0, 0.05);
    display: flex;
    margin-bottom: 40px;
}


.details {
    padding-left: 30px;
    padding-right: 20px;
    line-height: 1.8em;
}

.details .title h3 {
    font-size: 1.3em;
}

.details .speaker {
    font-style: italic;
    padding-top: 5px;
}

.details .abstract {
    padding-top: 15px;
    text-align: left;
}

.cal {
    display: inline-block;
    background-color: #f4f0eb;
    width: 150px;
    text-align: center;
    border-radius: 8px;
    font-family: "URW Gothic";
    font-weight: normal;
    min-width: 150px;
    max-height: 150px;
}
.cal .month {
    height: 50px;
    border-radius: 8px 8px 0 0;
    line-height: 50px;
    font-size: 1em;
    background-color: #ffc15a;
    font-weight: bold;
}
.cal .date {
    font-size: 2.5em;
    line-height: 75px;
    height: 50px;
}

.cal .time {
    height: 50px;
    line-height: 50px;
    font-size: 1em;

    font-weight: bold;
}


.grouped, .highlight {
    position: relative;
    margin-left: 10px;
    margin-right: 10px;
}
  
.grouped {
    display: inline-block;
    white-space: nowrap;
}



#img-separator-1, #img-separator-2 {
    background-color: #ffeac2;
    display: none;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
    height: 240px;

}

@media only screen and (max-width: 1000px) {

    .grouped:before {
        content: " ";
        display: block;
        height: 1em;
        width: 100%;
        position: absolute;
        transform: rotate(0deg);
        background: #ffc15a;
        top: 0.4em;
        left: -10px;
        border-radius: 20% 25% 20% 24%;
        padding-left: 10px;
        padding-right: 10px;
    }

    #grouped-d:before {
        background-color: #ff9c62;
    }

    #grouped-o:before {
        background-color: #ffad57;
        transform: rotate(1deg);
        border-radius: 10% 40% 5% 15%;
    }

    #grouped-g:before {
        background-color: #ffc15a;
        transform: rotate(-1deg);
        border-radius: 25% 15% 25% 15%;
    }

    #grouped-s:before {
        background-color: #ffdc5a;
        transform: rotate(0deg);
        border-radius: 5% 10% 20% 15%;
    }

    #left-images, #right-images {
        display: none;
    }

    #central-column {
        margin: auto;
        width: 100%;
    }

    .hideable {
        display: none;
    }

    .title-square {
        border-radius: unset;
        width: unset;
    }

    #title-d, #title-o, #title-g, #title-s {
        background: transparent;
    }

    #title {
        flex-direction: column-reverse;
        text-align: center;
        padding-left: 5%;
        padding-right: 5%;
    }

    #title .column:first-child  {
        padding: 0;
        margin: 0;
    }

    #title .column:last-child {
        width: 100%;
        height: 240px;
        padding: 0;
        background-image: url("../assets/dog2.png"), url("../assets/dog.png"), url("../assets/dog3.png");
        background-position: 10%, 50%, 100%;
        background-repeat: no-repeat, no-repeat, no-repeat;
    }

    .details-box {
        margin-left: 5%;
        margin-right: 5%;

        flex-direction: column;
        padding: 0;
    }

    .details {
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 20px;
        padding-bottom: 20px;
    }

    #information {
        padding-left: 10%;
        padding-right: 10%;
    }

    .cal {
        display: flex;
        flex-direction: row;
        width: 100%;
        padding: 0;
        border-radius: 8px 8px 0 0;
        background-color: #ffc15a;
    }

    .cal .month {
        border-radius: 8px 0 0 0;
        padding-left:20px;
    }

    .cal .date {
        font-size: 1em;
        line-height: 50px;
        padding-left: 0.5em;
    }

    .cal .time {
        margin-left: auto;
        padding-right: 20px;
    }
}


@media only screen and (max-width: 700px) {
    #title .column:last-child {
        width: 100%;
        height: 240px;
        padding: 0;
        background-image: url("../assets/dog.png");
        background-position: center;
        background-repeat: no-repeat;
    }

    #img-separator-1 {
        display: block;
        background-image: url("../assets/dog3.png");
    }

    #img-separator-2 {
        display: block;
        background-color: inherit;
        background-image: url("../assets/dog5-alt.png");
    }
}

